java 11 used, but tests fail because of unfinished configuration of modules